--- a/crud/src/main/resources/application.yml
+++ b/crud/src/main/resources/application.yml
@@ -18,3 +18,13 @@ spring:
     url: jdbc:mysql://localhost:3306/crud_service?useTimezone=true&serverTimezone=UTC
     username: root
     password: root
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: admin
+    password: admin
+
+crud:
+  rabbitmq:
+    exchange: crud.exchange
+    routingkey: crud.produto.routingkey
